Fix Buffered and Concat